--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <!-- displays site properly based on user's device -->
   <script src="https://kit.fontawesome.com/569b49915a.js" crossorigin="anonymous"></script>
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-
   <title>Frontend Mentor | Base Apparel coming soon page</title>
   <link rel="stylesheet" href="style.css">
 </head>
@@ -33,10 +32,12 @@
         </div>
 
         <div class="email-form">
-          <form action="">
-            <input class="email" type="text" name="email" placeholder="Email Address" required>
+          <form action="#">
+            <input class="email" type="text" name="email" placeholder="Email Address" >
             <!-- <input class="btn" type="submit" value=">"> -->
+            <img class="error" src="./images/icon-error.svg" alt="error">
             <button class="btn" type="submit" value="Submit"><i class="fas fa-chevron-right"></i></button>
+            <div class="small">Please provide a valid email</div>
           </form>
         </div>
       </div>
@@ -45,6 +46,7 @@
     </div>
 
   </main>
+  <script src="./main.js"></script>
 </body>
 
 </html>
