add js validation and svg background

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
         </div>
 
         <div class="email-form">
-          <form action="#">
+          <form action="#" novalidate>
             <input class="email" type="text" name="email" placeholder="Email Address" >
             <!-- <input class="btn" type="submit" value=">"> -->
             <img class="error" src="./images/icon-error.svg" alt="error">
-            <button class="btn" type="submit" value="Submit"><i class="fas fa-chevron-right"></i></button>
+            <button class="btn" type="button" value="Submit"><i class="fas fa-chevron-right"></i></button>
             <div class="small">Please provide a valid email</div>
           </form>
         </div>
