--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
           <img src="./images/logo.svg" alt="logo">
         </div>
         <div class="title">
-          <h1> <span> We're </span>
-            <h1>coming</h1>
-            <h1>soon</h1>
+          <h1> <span> We're </span> <br>
+            coming <br>
+            soon</h1>
         </div>
 
         <div class="paragraph">
           <p>Hello fellow shoppers! We're currently building our new fashion store.
-            Add your email below to stay up-to-date with announcements and our launch deals.
+            Add your email below to stay up-to-date with announcements and our launch deals.</p>
         </div>
 
         <div class="email-form">
